# ROTS

./: .actrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  config.yaml  docker_server_config.yaml  spriteMesh.rs
.github/workflows/: build.yml  build_linux.yml  deploy_gke.yml
assets/: Banana.aseprite  brown.asesprite  buff.aseprite
client/: Cargo.toml
client/assets/: bookmageIdle.gltf  orb.aseprite  penguin.gltf  penguinwalk.gltf  sprytilebrickhouse.glb  sprytilebrickhouse.gltf  tadpole.gltf
client/assets/fonts/: AUTHORS.txt  roboto.kttf
client/assets/ron/: biomes.ron
client/src/: camera.rs  cli.rs  examples.rs  lifetime.rs  main.rs  menu.rs  network.rs  particles.rs  physics.rs  player.rs  setup.rs  skills.rs  sprites.rs  states.rs  worldgen.rs
client/src/cameras/: chat.rs  mod.rs  notifications.rs  thirdperson.rs
client/src/menu/: mod.rs  scene.rs  systems.rs
client/src/network/: casting.rs  interactable.rs  npc.rs  stats.rs
client/src/networking/: client_bullet_receiver.rs  mod.rs
client/src/skills/: mod.rs
clientnew/: Cargo.toml
clientnew/src/: examples.rs  main.rs  physics.rs  player.rs  states.rs
clientnew/src/cameras/: mod.rs  thirdperson.rs
clientnew/src/menu/: mod.rs  scene.rs  systems.rs
clientold/: Cargo.toml
clientold/assets/: waterboll.aseprite
clientold/src/: physics.rs
server/: Cargo.toml  deploy.fish
server/src/: casting_spells.rs  chat.rs  game_manager.rs  main.rs  networking.rs  npc.rs  player_stats.rs
shared/: Cargo.toml  build.rs
shared/src/: animations.rs  casting.rs  event.rs  fakenetlib.rs  interactable.rs  lib.rs  netlib.rs  stats.rs  unit.rs
shared/src/animations/: systems.rs
shared/src/event/: client.rs  server.rs  spells.rs
shared/src/events/: connect.rs  mod.rs
src/: lifetime.rs  main.rs  player.rs  setup.rs  sprite.rs  spriteMesh.rs  sprites.rs  states.rs
src/assets/: 10x10.aseprite  Sprite-0001.aseprite
wasm_dist/: rots.html
