[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.1"
bevy_asset_loader = { version = "0.16.0", features = ["2d"] } 
bevy_fly_camera = "0.10.0"
bevy_sprite3d = "2.4.0"

[features]
bevy_dynamic = ["bevy/dynamic_linking"]
default = ["bevy_dynamic"]
