[package]
name = "ROTS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.1"
bevy_asset_loader = { version = "0.16.0", features = ["2d"] } 
bevy_fly_camera = "0.10.0"
bevy_rapier3d = { version = "0.21.0", features = [ "debug-render-3d", "parallel", "enhanced-determinism" ] }
bevy_mod_raycast = "0.8.0"
bevy_sprite3d = "2.4.0"
rayon = "1.7.0"
serde = "1.0.160"
wide = "0.7.8"

[features]
bevy_dynamic = ["bevy/dynamic_linking"]
default = ["bevy_dynamic"]
