[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
serde_yaml = "0.9.30"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
rand = "0.8.5"
message-io = "0.18.0"
shared = { path = "../shared" }
bevy_xpbd_3d = "0.3.3"
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }

bevy-inspector-egui = { version = "0.22.1", optional = true }
clap = { version = "4.4.18", features = ["derive"] } #
noise = "0.8.2"

[features]
inspector = ["dep:bevy-inspector-egui"]
default = []
