[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
serde_yaml = "0.9.34"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
rand = "0.8.5"
message-io = "0.18.1"
shared = { path = "../shared" }
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }

bevy-inspector-egui = { version = "0.24.0", optional = true }
clap = { version = "4.5.4", features = ["derive", "env"] }
noise = "0.9.0"

[features]
inspector = ["dep:bevy-inspector-egui"]
default = []
