[package]
name = "clientnew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
message-io = "0.18.0"
shared = { path = "../shared" }

#[features]
#bevy_dynamic = ["bevy/dynamic_linking"]
#default = ["bevy_dynamic"]
