[package] #
name = "clientold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_fly_camera = { git = "https://github.com/zachbateman/bevy_fly_camera.git", rev = "f48cf8db" }
bevy_rapier3d = { version = "0.23.0", features = [
    "debug-render-3d",
    "parallel",
    "enhanced-determinism",
] }
bevy_mod_raycast = "0.16.0"
bevy_sprite3d = "2.7.0"
rayon = "1.8.0"
wide = "0.7.13"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
message-io = "0.18.0"
shared = { path = "../shared" }

[dev-dependencies]
tungstenite = "0.20.1"

# [features]
#bevy_dynamic = ["bevy/dynamic_linking"]
# default = ["bevy_dynamic"]
