[package]
name = "server"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.12.1"
default-features = false
features = ["serialize"]

[dependencies]
message-io = "0.18.0"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"

# Everything that server has, we also have
bevy_ecs = "0.12.1"
bevy_app = "0.12.1"
bevy_log = "0.12.1"
bevy_core = "0.12.1"
bevy_time = "0.12.1"
bevy_transform = "0.12.1"
bevy_hierarchy = "0.12.1"
bevy_diagnostic = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }

shared = { path = "../shared" }
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }

[dev-dependencies]
tungstenite = "0.21.0"
