[package]
name = "server"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["serialize"]

[dependencies]
message-io = "0.18.1"
serde_yaml = "0.9.34"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"

# Everything that server has, we also have
bevy_ecs = "0.13.2"
bevy_app = "0.13.2"
bevy_log = "0.13.2"
bevy_core = "0.13.2"
bevy_time = "0.13.2"
bevy_transform = "0.13.2"
bevy_hierarchy = "0.13.2"
bevy_diagnostic = "0.13.2"
phf = { version = "0.11.2", features = ["macros"] }

shared = { path = "../shared" }
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
tungstenite = "0.21.0"
