[package] #
name = "shared"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.11.3"
default-features = false
features = ["serialize"]

[dependencies]
message-io = "0.18.0"
serde_yaml = "0.9.25"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
once_cell = "1.18.0"
rand = "0.8.5"

# Everything that server has, we also have
bevy_ecs = "0.11.3"
bevy_app = "0.11.3"
bevy_log = "0.11.3"
bevy_core = "0.11.3"
bevy_time = "0.11.3"
bevy_transform = "0.11.3"
bevy_hierarchy = "0.11.3"
bevy_diagnostic = "0.11.3"

[dev-dependencies]
tungstenite = "0.20.1"
